# rax

./: .coveragerc  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
main/: .env.example  settings.py  settings.py.orig  urls.py
main/pg_readonly/: base.py
rack/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
rack/migrations/: 0001_initial.py  0002_remove_rack_user.py  0003_alter_rack_options_server_color_alter_rack_size_and_more.py  0004_auto_20220804_1253.py  0005_auto_20220825_1131.py  0006_rack_note.py  0007_auto_20220831_1219.py  0008_auto_20220901_0941.py  0009_auto_20220902_1120.py  0010_server_position.py  0011_alter_rack_space.py  0012_auto_20221110_1406.py  0012_auto_20221111_1003.py
rack/services/: port.py  rack.py  server.py  widgets.py
rack/templates/rack/: base.html  color_widget.html  note.html  rack_create.html  rack_detail.html  rack_form.html  rack_list.html  server_create.html  server_detail.html  server_form.html
rack/templates/registration/: login.html
rack/templatetags/: tags.py
script/: cibuild  server  setup  test
