[tool.poetry]
name = "rack"
version = "0.1.0"
description = ""
authors = ["alexey <a.parshin@comearth.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
django-environ = "^0.8.1"
whitenoise = "^6.0.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
